test/fail_compilation/fail42.d
/+
struct Qwert {
     Qwert asdfg;
}
+/

struct Qwert {
     Yuiop asdfg;
}

struct Yuiop {
     Qwert hjkl;
}
